# erebor

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  SECURITY.md  docker-compose.yml
crates/erebor-aa/: Cargo.toml
crates/erebor-aa/src/: bundler.rs  lib.rs  paymaster.rs  wallet.rs
crates/erebor-auth/: Cargo.toml
crates/erebor-auth/src/: jwt.rs  lib.rs  linking.rs  middleware.rs  providers.rs  routes.rs  session.rs
crates/erebor-chain/: Cargo.toml
crates/erebor-chain/src/: broadcast.rs  chains.rs  gas.rs  lib.rs  rpc.rs  signer.rs  tx.rs
crates/erebor-common/: Cargo.toml
crates/erebor-common/src/: error.rs  lib.rs  types.rs
crates/erebor-gateway/: Cargo.toml
crates/erebor-gateway/src/: auth.rs  error.rs  main.rs  state.rs
crates/erebor-gateway/src/routes/: auth.rs  hsm.rs  mod.rs  mpc.rs  tee.rs  wallets.rs
crates/erebor-mpc/: Cargo.toml
crates/erebor-mpc/src/: anomaly.rs.bak  dkg.rs.bak  errors.rs  lib.rs  recovery.rs.bak  refresh.rs.bak  signing.rs.bak  simple_api.rs  simple_types.rs  types.rs.bak
crates/erebor-mpc/tests/: integration_tests.rs
crates/erebor-policy/: Cargo.toml
crates/erebor-policy/src/: aggregation.rs  condition.rs  engine.rs  error.rs  lib.rs  quorum.rs  rule.rs  tests.rs
crates/erebor-tee/: Cargo.toml
crates/erebor-tee/src/: attestation.rs  hsm.rs  lib.rs  nitro.rs  sealed.rs  sgx.rs
crates/erebor-tests/: Cargo.toml
crates/erebor-tests/tests/: crypto_tests.rs  integration_tests.rs  security_tests.rs
crates/erebor-vault/: Cargo.toml
crates/erebor-vault/src/: encryption.rs  key_derivation.rs  lib.rs  shamir.rs  storage.rs
deploy/helm/erebor/: Chart.yaml  values.yaml
deploy/helm/erebor/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  grafana-dashboard.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/architecture/: account-abstraction.md  auth-service.md  chain-service.md  key-vault.md  overview.md  security-model.md
docs/src/contributing/: development.md  security.md  testing.md
docs/src/getting-started/: configuration.md  docker.md  installation.md  quick-start.md
docs/src/guides/: key-management.md  multi-chain.md  self-hosting.md  session-keys.md
docs/src/sdk/: api-reference.md  react-native.md  react.md
sdks/kotlin/: README.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro  settings.gradle.kts
sdks/kotlin/src/main/: AndroidManifest.xml
sdks/kotlin/src/main/kotlin/io/erebor/sdk/: Erebor.kt
sdks/kotlin/src/main/kotlin/io/erebor/sdk/auth/: AuthManager.kt  GoogleAuthProvider.kt
sdks/kotlin/src/main/kotlin/io/erebor/sdk/compose/: EreborComposables.kt
sdks/kotlin/src/main/kotlin/io/erebor/sdk/crypto/: DeviceKeyManager.kt  Signer.kt
sdks/kotlin/src/main/kotlin/io/erebor/sdk/models/: ApiModels.kt  AuthProvider.kt  EreborConfig.kt  EreborUser.kt  EreborWallet.kt
sdks/kotlin/src/main/kotlin/io/erebor/sdk/network/: ApiClient.kt
sdks/kotlin/src/main/kotlin/io/erebor/sdk/storage/: DeviceShareStore.kt  SecureTokenStore.kt
sdks/kotlin/src/main/kotlin/io/erebor/sdk/ui/: LoginSheet.kt  TransactionConfirmSheet.kt  WalletCard.kt
sdks/kotlin/src/main/kotlin/io/erebor/sdk/wallet/: BiometricGate.kt  WalletManager.kt
sdks/kotlin/src/test/kotlin/io/erebor/sdk/: AuthManagerTest.kt  WalletManagerTest.kt
sdks/react/: README.md  package.json  tsconfig.json
sdks/react-native/: README.md  package.json  tsconfig.json
sdks/react-native/src/: EreborProvider.tsx  index.ts  types.ts
sdks/react-native/src/api/: client.ts
sdks/react-native/src/auth/: AppleAuth.ts  OAuthBrowser.ts
sdks/react-native/src/components/: LoginSheet.tsx  TransactionSheet.tsx  WalletCard.tsx
sdks/react-native/src/crypto/: DeviceKeyManager.ts  MobileSigner.ts
sdks/react-native/src/hooks/: useAuth.ts  useBiometrics.ts  useDeepLink.ts  useErebor.ts  usePrivy.ts  useSendTransaction.ts  useSignMessage.ts
sdks/react-native/src/storage/: SecureTokenStore.ts
sdks/react/src/: EreborProvider.tsx  index.ts  types.ts
sdks/react/src/api/: client.ts
sdks/react/src/components/: LoginModal.tsx  TransactionStatus.tsx  WalletButton.tsx
sdks/react/src/hooks/: useAuth.ts  useErebor.ts  usePrivy.ts  useSendTransaction.ts  useSignMessage.ts  useWallets.ts
sdks/react/src/iframe/: IframeController.ts  protocol.ts
sdks/swift/: Package.swift  README.md
sdks/swift/Sources/: Erebor.swift
sdks/swift/Sources/Auth/: AppleAuthProvider.swift  AuthManager.swift  GoogleAuthProvider.swift  OAuthBrowser.swift
sdks/swift/Sources/Crypto/: DeviceKeyManager.swift  Signer.swift
sdks/swift/Sources/Models/: AuthProvider.swift  Chain.swift  EreborConfig.swift  EreborUser.swift  EreborWallet.swift  LoginMethod.swift  PolicyDecision.swift  TransactionRequest.swift
sdks/swift/Sources/Networking/: APIClient.swift  APIError.swift
sdks/swift/Sources/Storage/: DeviceShareStore.swift  KeychainStore.swift
sdks/swift/Sources/UI/: LoginView.swift  TransactionConfirmView.swift  WalletCardView.swift
sdks/swift/Sources/Wallet/: BiometricGate.swift  WalletManager.swift
sdks/swift/Tests/EreborSwiftTests/: APIClientTests.swift  AuthManagerTests.swift  KeychainStoreTests.swift  WalletManagerTests.swift
tests/: crypto_tests.rs  integration_tests.rs  security_tests.rs
