[workspace]
members = [
    "crates/erebor-auth",
    "crates/erebor-vault",
    "crates/erebor-aa",
    "crates/erebor-chain",
    "crates/erebor-gateway",
    "crates/erebor-common",
    "crates/erebor-policy",
    "crates/erebor-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/haeli05/erebor"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
# Crypto
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
sha2 = "0.10"
hkdf = "0.12"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
argon2 = "0.5"
# JWT
jsonwebtoken = "9"
# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Error handling
thiserror = "1"
anyhow = "1"
# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.22"
dotenvy = "0.15"
# Secret sharing
vsss-rs = "4"
# Config
config = "0.14"
# Force compatible versions
getrandom = "0.2"
