[package]
name = "erebor-auth"
version.workspace = true
edition.workspace = true

[dependencies]
erebor-common = { path = "../erebor-common" }
async-trait = "0.1"
tower = { version = "0.5", features = ["util"] }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
