[package]
name = "erebor-chain"
version.workspace = true
edition.workspace = true

[dependencies]
erebor-common = { path = "../erebor-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
