[package]
name = "erebor-chain"
version.workspace = true
edition.workspace = true

[dependencies]
erebor-common = { path = "../erebor-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
url = "2"
rlp = "0.5"
tiny-keccak = { version = "2", features = ["keccak"] }
k256 = "0.13"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
