[package]
name = "erebor-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "erebor"
path = "src/main.rs"

[dependencies]
erebor-common = { path = "../erebor-common" }
erebor-auth = { path = "../erebor-auth" }
erebor-vault = { path = "../erebor-vault" }
erebor-aa = { path = "../erebor-aa" }
erebor-chain = { path = "../erebor-chain" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
