[package]
name = "erebor-mpc"
version.workspace = true
edition.workspace = true

[dependencies]
erebor-common = { path = "../erebor-common" }
erebor-vault = { path = "../erebor-vault" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Cryptography - ECDSA & secp256k1
k256 = { workspace = true, features = ["ecdsa", "sha256"] }
sha2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }

# Paillier encryption for MPC
# paillier = { version = "0.2", features = ["keygen"] }

# Secret sharing (for VSS and recovery)
sharks = "0.5"

# ZK proofs and additional crypto
# merlin = "3.0"
# curve25519-dalek = "4.1"
# schnorr_fun = { version = "0.10", features = ["serde"] }

# Networking and communication
reqwest = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# For anomaly detection
serde_derive = "1.0"
statistical = "1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
tokio-test = "0.4"