[package]
name = "erebor-policy"
version.workspace = true
edition.workspace = true

[dependencies]
erebor-common = { path = "../erebor-common" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"